# research_pilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml.example  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: docs.yml
assistant/: __init__.py
assistant/agents/: core.py  deepAgent.py
assistant/skills/: README.md
assistant/skills/paper-finder/: SKILL.md
assistant/tools/: __init__.py
assistant/tools/career/: search.py
assistant/tools/document/: ocr.py  read.py  write.py
assistant/tools/research/: __init__.py  grants.py
assistant/tools/storage/: __init__.py  articles.py
assistant/tools/web/: download.py  web_search.py
docs/: index.md
docs/tutorials/: README.md  agents.md  articles.md  browser.md  files.md  google_scholar.md  grants.md  jobs.md  management.md  ocr.md  quickstart.md  skills.md  storage.md  workflows.md
trion/: __init__.py  management.py
trion/agents/: README.md  __init__.py  core.py  deepAgent.py
trion/tools/: _dependencies.py
trion/tools/career/: search.py
trion/tools/document/: ocr.py  read.py  write.py
trion/tools/research/: articles.py  google_scholar.py  grants.py
trion/tools/storage/: articles.py  career.py  grants.py
trion/tools/web/: browser.py  download.py  web_search.py
trion/utils/: __init__.py  config.py
