[project]
name = "research-pilot"
version = "0.1.0"
description = "Research Pilot - Search academic papers, extract text from documents, and manage research workflows"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "ollama>=0.4.0",
    "pandas>=2.0.0",
    "biopython>=1.80",
    "arxiv>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ddgs>=0.2.0",
    "docling>=2.0.0",
    "python-jobspy>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistant"]

[tool.uv]
package = true
